# study-projects

./: LICENSE  README.md
lirycs_api_test/: .gitignore  README.md  app.py  pyproject.toml
