[project]
name = "lyrics-project-usingapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorenna Carvalho",Linkedin = "https://www.linkedin.com/in/lorenna-carvalho-costa/"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
